--- a/SummitSportsApp/SummitSportsApp/SummitSportsApp.csproj
+++ b/SummitSportsApp/SummitSportsApp/SummitSportsApp.csproj
@@ -85,5 +85,8 @@
   <ItemGroup>
     <None Include="images\bgLogon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="images\bgLogon43.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
