--- a/SummitSportsApp/SummitSportsApp/SummitSportsApp.csproj
+++ b/SummitSportsApp/SummitSportsApp/SummitSportsApp.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="clsCategory.cs" />
+    <Compile Include="Discount.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="Category.cs" />
     <Compile Include="clsHTML.cs" />
     <Compile Include="frmCheckout.cs">
       <SubType>Form</SubType>
